--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
           <p class="large-hero__description">
             We create soul restoring journeys that inspire you to be you.
           </p>
+
           <p>
             <a href="#" class="btn btn--orange btn--large">Get Started Today</a>
           </p>
@@ -84,12 +85,14 @@
         >
           The first trip we planned <strong>was our own.</strong>
         </h2>
+
         <h3
           class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large"
         >
           Ever since, we&rsquo;ve been working to make travel
           <strong>better for everyone.</strong>
         </h3>
+
         <div class="wrapper wrapper--medium wrapper--b-margin">
           <img
             sizes="(min-width: 970px) 976px, 100vw"
@@ -134,11 +137,13 @@
               />
             </picture>
           </div>
+
           <div class="row__medium-8 row__medium-8--smaller">
             <div class="generic-content-container">
               <h2 class="headline headline--no-t-margin">
                 Here&rsquo;s how we got started&hellip;
               </h2>
+
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -149,6 +154,7 @@
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
+
               <p>
                 Duis aute irure dolor in
                 <strong>reprehenderit in</strong> voluptate velit esse cillum
@@ -158,6 +164,7 @@
                 consectetur adipisicing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua.
               </p>
+
               <p>
                 Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
@@ -173,40 +180,73 @@
 
     <div id="features" class="page-section page-section--blue">
       <div class="wrapper">
-        <img src="assets/images/icons/star.svg" />
-        <h2>Our Features</h2>
+        <h2 class="section-title">
+          <img
+            class="section-title__icon"
+            src="assets/images/icons/star.svg"
+          />Our
+          <strong>Features</strong>
+        </h2>
 
-        <img src="assets/images/icons/rain.svg" />
-        <h3>We&rsquo;ll Watch the Weather</h3>
-        <p>
-          Download our app and we&rsquo;ll send you a notice if it&rsquo;s about
-          to rain in the next 20 minutes around your current location. A good
-          rain can be refreshing, but sometimes you just want to stay dry.
-        </p>
+        <div class="row row--gutters-large generic-content-container">
+          <div class="row__medium-6">
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/rain.svg"
+              />
+              <h3 class="feature-item__title">We&rsquo;ll Watch the Weather</h3>
+              <p>
+                Download our app and we&rsquo;ll send you a notice if it&rsquo;s
+                about to rain in the next 20 minutes around your current
+                location. A good rain can be refreshing, but sometimes you want
+                to stay dry.
+              </p>
+            </div>
 
-        <img src="assets/images/icons/globe.svg" />
-        <h3>Global Guides</h3>
-        <p>
-          We&rsquo;ve scoured the entire planet for the best retreats and
-          beautiful vistas. If there&rsquo;s a corner of the world you want to
-          escape to we know the most scenic and inspiring locations.
-        </p>
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/globe.svg"
+              />
+              <h3 class="feature-item__title">Global Guides</h3>
+              <p>
+                We&rsquo;ve scoured the entire planet for the best retreats and
+                beautiful vistas. If there&rsquo;s a corner of the world you
+                want to escape to we know the most scenic and inspiring
+                locations.
+              </p>
+            </div>
+          </div>
 
-        <img src="assets/images/icons/wifi.svg" />
-        <h3>Wi-Fi Waypoints</h3>
-        <p>
-          We only send you on trips to places we can personally vouch for as
-          being amazing. Which means we&rsquo;ve mapped out where local wi-fi
-          spots are and marked them in our app&rsquo;s map view.
-        </p>
+          <div class="row__medium-6">
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/wifi.svg"
+              />
+              <h3 class="feature-item__title">Wi-Fi Waypoints</h3>
+              <p>
+                We only send you on trips to places we can personally vouch for
+                as being amazing. Which means we&rsquo;ve mapped out where local
+                wi-fi spots are and marked them in our app&rsquo;s map view.
+              </p>
+            </div>
 
-        <img src="assets/images/icons/fire.svg" />
-        <h3>Survival Kit</h3>
-        <p>
-          Everytime you book an escape with us we send you a survival kit with
-          the finest materials. The kit will allow you to setup a tent, start a
-          fire, scratch your own back and lower your taxes.
-        </p>
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/fire.svg"
+              />
+              <h3 class="feature-item__title">Survival Kit</h3>
+              <p>
+                Everytime you book an escape with us we send you a survival kit
+                with the finest materials. The kit will allow you to setup a
+                tent, start a fire, scratch your own back and lower your taxes.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
